--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <string name="facebook_app_id">486752115987778</string>
     <string name="fb_login_protocol_scheme">fb486752115987778</string>
+    <string name="video_thumbnail">video thumbnail</string>
 </resources>
