--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Movie Streaming</string>
+    <string name="app_name">Stream Away</string>
     <string name="sample_image">Sample Image</string>
     <string name="title_activity_navigation">NavigationActivity</string>
     <string name="title_home">Home</string>
@@ -11,4 +11,5 @@
     <string name="fb_login_protocol_scheme">fb486752115987778</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="empty" />
 </resources>
