--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="empty" />
+
+    <string name="youtube_api_key">AIzaSyCGIbCVtQ9lbfARjwk5iRqfNKPyRhwDLlU</string>
 </resources>
